--- a/index.html
+++ b/index.html
@@ -69,31 +69,10 @@
           <a href="https://jwright2021.github.io/workingPortfolio/">Home</a>
         </div>
         <div>
-          <a href="https://jwright2021.github.io/workingPortfolio/about.html"
-            >About</a
+          <a
+            href="https://jwright2021.github.io/workingPortfolio/categories.html"
+            >Categories</a
           >
-        </div>
-        <div class="navbar-dropdown">
-          Categories
-          <div class="dropdown-icon">
-            <svg
-              class="ast-arrow-svg"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              version="1.1"
-              x="0px"
-              y="0px"
-              width="26px"
-              height="16.043px"
-              viewBox="57 35.171 26 16.043"
-              enable-background="new 57 35.171 26 16.043"
-              xml:space="preserve"
-            >
-              <path
-                d="M57.5,38.193l12.5,12.5l12.5-12.5l-2.5-2.5l-10,10l-10-10L57.5,38.193z"
-              ></path>
-            </svg>
-          </div>
         </div>
         <div class="navbar-dropdown">
           Tools
@@ -120,6 +99,11 @@
         <div>
           <a href="http://jwright2021.github.io/workingPortfolio/shop.html"
             >Shop</a
+          >
+        </div>
+        <div>
+          <a href="https://jwright2021.github.io/workingPortfolio/about.html"
+            >About</a
           >
         </div>
       </div>
