update script reference

--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,10 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
     <link type="text/css" rel="stylesheet" href="shop-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/shop-script.js" defer></script>
+    <script
+      src="https://jwright2021.github.io/workingPortfolio/shop-script.js"
+      defer
+    ></script>
     <title>Paper Kawaii: Shop</title>
   </head>
   <body>
