--- a/categories.html
+++ b/categories.html
@@ -8,7 +8,10 @@
     />
     <link type="text/css" rel="stylesheet" href="style.css" />
     <link type="text/css" rel="stylesheet" href="categories-style.css" />
-    <script src="/categories-script.js" defer></script>
+    <script
+      src="https://jwright2021.github.io/workingPortfolio/categories-script.js"
+      defer
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paper Kawaii: Categories</title>
   </head>
