--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
     <link type="text/css" rel="stylesheet" href="index-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/script.js" defer></script>
+    <script
+      src="https://jwright2021.github.io/workingPortfolio/script.js"
+      defer
+    ></script>
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
