--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
     <link type="text/css" rel="stylesheet" href="index-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
+    <!-- <script
       src="https://jwright2021.github.io/workingPortfolio/script.js"
       defer
-    ></script>
+    ></script> -->
+    <script src="/script.js" defer></script>
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
