--- a/categories.html
+++ b/categories.html
@@ -12,6 +12,7 @@
       src="https://jwright2021.github.io/workingPortfolio/categories-script.js"
       defer
     ></script>
+    <!-- <script src="./categories-script.js" defer></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paper Kawaii: Categories</title>
   </head>
