--- a/shop.html
+++ b/shop.html
@@ -13,6 +13,7 @@
       src="https://jwright2021.github.io/workingPortfolio/shop-script.js"
       defer
     ></script>
+    <!-- <script src="./shop-script.js" defer></script> -->
     <title>Paper Kawaii: Shop</title>
   </head>
   <body>
