--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
-    <link type="text/css" rel="stylesheet" href="style.css" />
-    <link type="text/css" rel="stylesheet" href="index-style.css" />
+    <link type="text/css" rel="stylesheet" href="/styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="/styles/index-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/script.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
       defer
     ></script>
-    <!-- <script src="/script.js" defer></script> -->
+    <script src="/scripts/index-script.js" defer></script>
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
