--- a/index.html
+++ b/index.html
@@ -153,6 +153,24 @@
         Menu
       </div>
     </div>
+    <div class="open-modal-btn-wrapper hide">
+      <button class="open-modal-btn" id="clickMe">Open Modal</button>
+    </div>
+
+    <div class="modal-overlay hide in" id="myModal">
+      <div class="modal-wrapper">
+        <div class="close-btn-wrapper">
+          <button class="close-modal-btn">Close</button>
+        </div>
+        <h1>Welcome to My Portfolio Sample</h1>
+        <div class="modal-content">
+          Hello, I've based this website off of Paper Kawaii because I like
+          origami. I'm open to work and am available for hire. Links here either
+          redirect to another of my pages or to my linked in or to Paper Kawaii
+          itself (which is a wonderful site to learn origamis). Happy viewing!
+        </div>
+      </div>
+    </div>
     <div class="page-container">
       <div class="page-width">
         <h1>Origami & Paper Craft Tutorials</h1>
