comment out modal work for reorg

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         Menu
       </div>
     </div>
-    <div class="open-modal-btn-wrapper hide">
+    <!-- <div class="open-modal-btn-wrapper hide">
       <button class="open-modal-btn" id="clickMe">Open Modal</button>
     </div>
 
@@ -170,7 +170,7 @@
           itself (which is a wonderful site to learn origamis). Happy viewing!
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="page-container">
       <div class="page-width">
         <h1>Origami & Paper Craft Tutorials</h1>
