update style links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/index-style.css"
+    />
     <link type="text/css" rel="stylesheet" href="/styles/style.css" />
     <link type="text/css" rel="stylesheet" href="/styles/index-style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
