--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/index-style.css"
     />
-    <link type="text/css" rel="stylesheet" href="/styles/style.css" />
-    <link type="text/css" rel="stylesheet" href="/styles/index-style.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/index-style.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
       defer
     ></script>
-    <script src="/scripts/index-script.js" defer></script>
+    <!-- <script src="/scripts/index-script.js" defer></script> -->
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
