--- a/shop.html
+++ b/shop.html
@@ -6,14 +6,22 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
-    <link type="text/css" rel="stylesheet" href="/styles/style.css" />
-    <link type="text/css" rel="stylesheet" href="/styles/shop-style.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/shop-style.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/shop-script.js"
       defer
     ></script>
-    <script src="/scripts/shop-script.js" defer></script>
+    <!-- <script src="/scripts/shop-script.js" defer></script> -->
     <title>Paper Kawaii: Shop</title>
   </head>
   <body>
