fix all links with note

--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
     <link type="text/css" rel="stylesheet" href="https://jwright2021.github.io/workingPortfolio/styles/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Local development  -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Paper Kawaii: About</title>
   </head>
   <body>
