--- a/shop.html
+++ b/shop.html
@@ -21,6 +21,9 @@
       src="https://jwright2021.github.io/workingPortfolio/scripts/shop-script.js"
       defer
     ></script>
+    <!-- Local development  -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/shop-style.css" /> -->
     <!-- <script src="/scripts/shop-script.js" defer></script> -->
     <title>Paper Kawaii: Shop</title>
   </head>
