--- a/categories.html
+++ b/categories.html
@@ -16,16 +16,17 @@
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/categories-style.css"
     />
-    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" />
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="/styles/categories-style.css"
-    /> -->
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/categories-script.js"
       defer
     ></script>
+    <!-- Local development  -->
+    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
+    <!-- <link
+      type="text/css"
+      rel="stylesheet"
+      href="/styles/categories-style.css"
+    /> -->
     <!-- <script src="/scripts/categories-script.js" defer></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paper Kawaii: Categories</title>
