new script to handle page constants

--- a/categories.html
+++ b/categories.html
@@ -20,6 +20,10 @@
       src="https://jwright2021.github.io/workingPortfolio/scripts/categories-script.js"
       defer
     ></script>
+    <!-- <script
+      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
+      defer
+    ></script> -->
     <!-- Local development  -->
     <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
     <!-- <link
@@ -28,6 +32,7 @@
       href="/styles/categories-style.css"
     /> -->
     <!-- <script src="/scripts/categories-script.js" defer></script> -->
+    <script src="/scripts/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paper Kawaii: Categories</title>
   </head>
@@ -238,15 +243,6 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="footer-nav">
-        <div>About Paper Kawaii</div>
-        <div>Donate & Support</div>
-        <div>Privacy Policy</div>
-        <div>Copyright information</div>
-        <div>Contact</div>
-      </div>
-      <div class="copyright">Copyright © 2024 Paper Kawaii</div>
-    </div>
+    <div id="footerInjection"></div>
   </body>
 </html>
