--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
-    <link
+    <!-- <link
       type="text/css"
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
@@ -21,10 +21,15 @@
       src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
       defer
     ></script>
+    <script
+      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
+      defer
+    ></script> -->
     <!-- Local development -->
-    <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
-    <!-- <link type="text/css" rel="stylesheet" href="/styles/index-style.css" /> -->
-    <!-- <script src="/scripts/index-script.js" defer></script> -->
+    <link type="text/css" rel="stylesheet" href="/styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="/styles/index-style.css" />
+    <script src="/scripts/index-script.js" defer></script>
+    <script src="/scripts/script.js" defer></script>
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
@@ -290,15 +295,6 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="footer-nav">
-        <div>About Paper Kawaii</div>
-        <div>Donate & Support</div>
-        <div>Privacy Policy</div>
-        <div>Copyright information</div>
-        <div>Contact</div>
-      </div>
-      <div class="copyright">Copyright © 2024 Paper Kawaii</div>
-    </div>
+    <div id="footerInjection"></div>
   </body>
 </html>
