--- a/about.html
+++ b/about.html
@@ -7,9 +7,14 @@
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
     <link type="text/css" rel="stylesheet" href="https://jwright2021.github.io/workingPortfolio/styles/style.css" />
+    <!-- <script
+      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
+      defer
+    ></script> -->
     <!-- Local development  -->
     <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+     <script src="/scripts/script.js" defer></script>
     <title>Paper Kawaii: About</title>
   </head>
   <body>
@@ -295,15 +300,6 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="footer-nav">
-        <div>About Paper Kawaii</div>
-        <div>Donate & Support</div>
-        <div>Privacy Policy</div>
-        <div>Copyright information</div>
-        <div>Contact</div>
-      </div>
-      <div class="copyright">Copyright © 2024 Paper Kawaii</div>
-    </div>
+    <div id="footerInjection"></div>
   </body>
 </html>
