--- a/shop.html
+++ b/shop.html
@@ -21,10 +21,15 @@
       src="https://jwright2021.github.io/workingPortfolio/scripts/shop-script.js"
       defer
     ></script>
+    <!-- <script
+      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
+      defer
+    ></script> -->
     <!-- Local development  -->
     <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" /> -->
     <!-- <link type="text/css" rel="stylesheet" href="/styles/shop-style.css" /> -->
     <!-- <script src="/scripts/shop-script.js" defer></script> -->
+    <script src="/scripts/script.js" defer></script>
     <title>Paper Kawaii: Shop</title>
   </head>
   <body>
@@ -262,15 +267,6 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="footer-nav">
-        <div>About Paper Kawaii</div>
-        <div>Donate & Support</div>
-        <div>Privacy Policy</div>
-        <div>Copyright information</div>
-        <div>Contact</div>
-      </div>
-      <div class="copyright">Copyright © 2024 Paper Kawaii</div>
-    </div>
+    <div id="footerInjection"></div>
   </body>
 </html>
