set up new data to origamis data json

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
@@ -16,20 +17,19 @@
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/index-style.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
       defer
     ></script>
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/index-script.js"
       defer
     ></script>
     <!-- Local development -->
     <!-- <link type="text/css" rel="stylesheet" href="/styles/style.css" />
     <link type="text/css" rel="stylesheet" href="/styles/index-style.css" />
-    <script src="/scripts/index-script.js" defer></script>
-    <script src="/scripts/script.js" defer></script> -->
+    <script src="/scripts/script.js" defer></script>
+    <script src="/scripts/index-script.js" defer></script> -->
     <title>Paper Kawaii: Home</title>
   </head>
   <body>
