--- a/categories.html
+++ b/categories.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
@@ -17,11 +18,11 @@
       href="https://jwright2021.github.io/workingPortfolio/styles/categories-style.css"
     />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/categories-script.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
       defer
     ></script>
     <script
-      src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/categories-script.js"
       defer
     ></script>
     <!-- Local development  -->
@@ -31,9 +32,8 @@
       rel="stylesheet"
       href="/styles/categories-style.css"
     />
-    <script src="/scripts/categories-script.js" defer></script>
-    <script src="/scripts/script.js" defer></script> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/scripts/script.js" defer></script>
+    <script src="/scripts/categories-script.js" defer></script> -->
     <title>Paper Kawaii: Categories</title>
   </head>
   <body>
