changed on load to call funtions, made js functions more consistent, enabled modal function

--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
         Menu
       </div>
     </div>
-    <!-- <div class="open-modal-btn-wrapper hide">
-      <button class="open-modal-btn" id="clickMe">Open Modal</button>
-    </div>
-
-    <div class="modal-overlay hide in" id="myModal">
+    <div class="modal-overlay in" id="myModal">
       <div class="modal-wrapper">
         <div class="close-btn-wrapper">
           <button class="close-modal-btn">Close</button>
@@ -79,7 +75,7 @@
           itself (which is a wonderful site to learn origamis). Happy viewing!
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="page-container">
       <div class="page-width">
         <h1>Origami & Paper Craft Tutorials</h1>
