added styling for mobile and tablet for about and categories

--- a/about.html
+++ b/about.html
@@ -7,7 +7,11 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/origami-cropped-favicon-1.png"
     />
-    <link type="text/css" rel="stylesheet" href="https://jwright2021.github.io/workingPortfolio/styles/style.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/styles/style.css"
+    />
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/script.js"
       defer
@@ -29,7 +33,7 @@
         <div id="navbarSearchInjection"></div>
       </div>
     </div>
-    <div id="logoInjection"></div>    
+    <div id="logoInjection"></div>
     <div class="mobile-navbar">
       <div>
         <svg
@@ -131,6 +135,7 @@
             something from a tutorial, please feel free to tag me (@paperkawaii)
             on instagram or twitter.
           </p>
+        </div>
       </div>
     </div>
     <div class="page-container">
