fixing mobile style for modal and added pictures for links

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
     </div>
     <div class="modal-overlay in" id="myModal">
       <div class="modal-wrapper">
-        <div class="close-btn-wrapper">
-          <button class="close-modal-btn">Close</button>
-        </div>
         <h1>Welcome to My Portfolio Sample</h1>
         <div class="modal-content">
           Hello, I've based this website off of Paper Kawaii because I like
           origami. I'm open to work and am available for hire. Links here either
           redirect to another of my pages or to my linked in or to Paper Kawaii
           itself (which is a wonderful site to learn origamis). Happy viewing!
+        </div>
+        <div class="close-btn-wrapper">
+          <button class="close-modal-btn">Close</button>
         </div>
       </div>
     </div>
@@ -128,8 +128,10 @@
       </div>
     </div>
     <div class="page-container">
-      <div class="page-constants">
-        <div id="pageConstantsInjection"></div>
+      <div class="page-width">
+        <div class="page-constants">
+          <div id="pageConstantsInjection"></div>
+        </div>
       </div>
     </div>
     <div id="footerInjection"></div>
