--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://jwright2021.github.io/workingPortfolio/homepage.css"
+    />
+    <script
+      src="https://jwright2021.github.io/workingPortfolio/homepage.js"
+      defer
+    ></script>
     <!-- Local development -->
-    <link rel="icon" href="images/myIcon.png" />
+    <!-- <link rel="icon" href="images/myIcon.png" />
     <link type="text/css" rel="stylesheet" href="/homepage.css" />
-    <script src="/homepage.js" defer></script>
+    <script src="/homepage.js" defer></script> -->
     <title>Jenna Wright</title>
   </head>
   <body>
