--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <i class="fas fa-bars"></i>
       </label>
       <label class="logo"
-        ><img src="/images/myIcon.png" alt="JennaWrightLogo"
+        ><img
+          src="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
+          alt="JennaWrightLogo"
       /></label>
       <ul>
         <li><a class="active" href="#Career">Career</a></li>
