implementing new feedback

--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
     <title>Paper Kawaii: Shop</title>
   </head>
   <body>
-    <div class="navbar">
+    <nav class="navbar">
       <div class="navbar-socials">
         <div id="navbarSocialsInjection"></div>
       </div>
@@ -43,7 +43,7 @@
       <div class="navbar-search">
         <div id="navbarSearchInjection"></div>
       </div>
-    </div>
+    </nav>
     <div id="logoInjection"></div>
     <div class="mobile-navbar">
       <div>
