--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <title>Paper Kawaii: About</title>
   </head>
   <body>
-    <div class="navbar">
+    <nav class="navbar">
       <div class="navbar-socials">
         <div id="navbarSocialsInjection"></div>
       </div>
@@ -32,7 +32,7 @@
       <div class="navbar-search">
         <div id="navbarSearchInjection"></div>
       </div>
-    </div>
+    </nav>
     <div id="logoInjection"></div>
     <div class="mobile-navbar">
       <div>
