--- a/categories.html
+++ b/categories.html
@@ -37,7 +37,7 @@
     <title>Paper Kawaii: Categories</title>
   </head>
   <body>
-    <div class="navbar">
+    <nav class="navbar">
       <div class="navbar-socials">
         <div id="navbarSocialsInjection"></div>
       </div>
@@ -47,7 +47,7 @@
       <div class="navbar-search">
         <div id="navbarSearchInjection"></div>
       </div>
-    </div>
+    </nav>
     <div id="logoInjection"></div>
     <div class="mobile-navbar">
       <div>
