--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://jwright2021.github.io/workingPortfolio/homepage.css"
+      href="https://jwright2021.github.io/workingPortfolio/styles/homepage.css"
     />
     <script
-      src="https://jwright2021.github.io/workingPortfolio/homepage.js"
+      src="https://jwright2021.github.io/workingPortfolio/scripts/homepage.js"
       defer
     ></script>
     <!-- Local development -->
     <!-- <link rel="icon" href="images/myIcon.png" />
-    <link type="text/css" rel="stylesheet" href="/homepage.css" />
-    <script src="/homepage.js" defer></script> -->
+    <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
+    <script src="scripts/homepage.js" defer></script> -->
     <title>Jenna Wright</title>
   </head>
   <body>
@@ -118,7 +118,7 @@
         <a class="button-go-to-top" href="#top">Go to top</a>
         <h3 id="Portfolio">My Portfolio</h3>
         <a
-          href="https://jwright2021.github.io/workingPortfolio/paper-kawaii.html"
+          href="https://jwright2021.github.io/workingPortfolio/pages/paper-kawaii.html"
           >Paper Kawaii Copy</a
         >
         <p>
