mobile navigation now works, screen resizing is better

--- a/index.html
+++ b/index.html
@@ -24,39 +24,21 @@
   </head>
   <body>
     <a id="top"></a>
-    <div class="navigation-links">
-      <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+    <nav class="navigation-links">
       <label class="logo"
         ><img
           src="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
           alt="JennaWrightLogo"
       /></label>
-      <ul>
-        <li><a class="active" href="#Career">Career</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#About">About</a></li>
+      <button class="menu-toggle" aria-label="Toggle navigation">
+        &#9776; Menu
+      </button>
+      <ul id="nav-links">
+        <li><a class="headNav" href="#Career">Career</a></li>
+        <li><a class="headNav" href="#Portfolio">Portfolio</a></li>
+        <li><a class="headNav" href="#About">About</a></li>
       </ul>
-    </div>
-    <div class="mobile-navbar">
-      <div>
-        <svg
-          fill="#eeeeee"
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 -5 24 24"
-        >
-          <path
-            d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z"
-          ></path>
-        </svg>
-        Menu
-      </div>
-    </div>
+    </nav>
     <div class="main">
       <header>
         <h1>Jenna Wright</h1>
@@ -71,7 +53,7 @@
         <div class="career-resume">
           <div class="career-card">
             <div class="timeline">
-              <div class="date">2024 - PRESENT</div>
+              <div class="date">Jan. 2022 - PRESENT</div>
               <div class="length">2.5 Years</div>
             </div>
             <div class="skills-card">
