--- a/pages/paper-kawaii.html
+++ b/pages/paper-kawaii.html
@@ -34,34 +34,22 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="navbar-socials">
-        <div id="navbarSocialsInjection"></div>
-      </div>
-      <div class="navbar-nav">
-        <div id="navbarNavInjection"></div>
-      </div>
-      <div class="navbar-search">
-        <div id="navbarSearchInjection"></div>
+      <button class="menu-toggle" aria-label="Toggle navigation">
+        &#9776; Menu
+      </button>
+      <div class="navbar-links hidden" id="nav-links">
+        <div class="navbar-socials">
+          <div id="navbarSocialsInjection"></div>
+        </div>
+        <div class="navbar-nav">
+          <div id="navbarNavInjection"></div>
+        </div>
+        <div class="navbar-search">
+          <div id="navbarSearchInjection"></div>
+        </div>
       </div>
     </nav>
     <div id="logoInjection"></div>
-    <div class="mobile-navbar">
-      <div>
-        <svg
-          fill="#ff7bac"
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 -5 24 24"
-        >
-          <path
-            d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z"
-          ></path>
-        </svg>
-        Menu
-      </div>
-    </div>
     <div class="modal-overlay in" id="myModal">
       <div class="modal-wrapper">
         <h1>Welcome to My Portfolio Sample</h1>
