--- a/pages/paper-kawaii.html
+++ b/pages/paper-kawaii.html
@@ -52,12 +52,13 @@
     <div id="logoInjection"></div>
     <div class="modal-overlay in" id="myModal">
       <div class="modal-wrapper">
-        <h1>Welcome to My Portfolio Sample</h1>
+        <h1>My Reimagined Copy of Paper Kawaii</h1>
         <div class="modal-content">
-          Hello, I've based this website off of Paper Kawaii because I like
-          origami. I'm open to work and am available for hire. Links here either
-          redirect to another of my pages or to my linked in or to Paper Kawaii
-          itself (which is a wonderful site to learn origamis). Happy viewing!
+          Hello and welcome. I've based this project off of the Paper Kawaii
+          website because I like origami and they have a lot of content. I'm
+          just showcasing lighlty some of my Frontend abilities. Links here
+          either redirect to the actual Paper Kawaii site, another of page
+          example or to my LinkedIn profile. Happy viewing!
         </div>
         <div class="close-btn-wrapper">
           <button class="close-modal-btn">Close</button>
