reworded career details

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
             <div class="job-card">
               <div class="job-title">Software Engineer ♦ Lumen Learning</div>
               <div class="job-description">
-                Primarily work as a FE developer implementing designs into code
-                for reusable functions and features in Vue and React. Work
-                closely with cross-function teams, developers, back end,
-                designers, product managers to implement new designs. Made new
-                greenfield product for use with internal CMS systems.
+                Primarily worked on the Frontend implementing designs into code
+                for reusable functions and features in Vue and React across
+                multiple products. Worked closely with cross-function teams,
+                developers, back end, designers, product managers to implement
+                new designs. Made new greenfield product for use with internal
+                CMS systems.
               </div>
             </div>
           </div>
@@ -89,10 +90,10 @@
             <div class="job-card">
               <div class="job-title">Applications Engineer ♦ Vanguard</div>
               <div class="job-description">
-                Primarily work as a Full Stack developer maintaining legacy
-                codes. Work closel with cross-function teams, developers, back
-                end, designers, product managers to implement new designs. Made
-                new greenfield product for use with internal CMS systems.
+                Primarily worked as a Full Stack developer maintaining legacy
+                codes. Worked closely with cross-function teams, developers,
+                backend, designers, product managers to implement new designs.
+                Made new greenfield product for use with internal CMS systems.
               </div>
             </div>
           </div>
@@ -104,8 +105,9 @@
           >Paper Kawaii Copy</a
         >
         <p>
-          I like origami and have followed this site for a lot of tutorials. I
-          figured it'd be fun to a sample site based on it.
+          This is a reimagined take on Paper Kawaii. I like origami and have
+          followed this site for a lot of tutorials; so I figured it'd be fun to
+          make a sample site based on it.
         </p>
         <a class="button-go-to-top" href="#top">Go to top</a>
         <h3 id="About">About Me</h3>
