--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="main">
       <header>
         <h1>Jenna Wright</h1>
-        <h2>Front End Developer</h2>
+        <h2>Software Engineer</h2>
         <p>&#128204; Coding since 2019 from PA, USA &#128204;</p>
       </header>
       <page>
