styled the button launch to paper kawaii site

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <a class="button-go-to-top" href="#top">Go to top</a>
         <h3 id="Portfolio">My Portfolio</h3>
         <a
+          class="paper-kawaii-button"
           href="https://jwright2021.github.io/workingPortfolio/pages/paper-kawaii.html"
           >Paper Kawaii Copy</a
         >
