updated career card content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://jwright2021.github.io/workingPortfolio/images/myIcon.png"
     />
-    <link
+    <!-- <link
       type="text/css"
       rel="stylesheet"
       href="https://jwright2021.github.io/workingPortfolio/styles/homepage.css"
@@ -15,11 +15,11 @@
     <script
       src="https://jwright2021.github.io/workingPortfolio/scripts/homepage.js"
       defer
-    ></script>
+    ></script> -->
     <!-- Local development -->
-    <!-- <link rel="icon" href="images/myIcon.png" />
+    <link rel="icon" href="images/myIcon.png" />
     <link type="text/css" rel="stylesheet" href="styles/homepage.css" />
-    <script src="scripts/homepage.js" defer></script> -->
+    <script src="scripts/homepage.js" defer></script>
     <title>Jenna Wright</title>
   </head>
   <body>
@@ -53,7 +53,7 @@
         <div class="career-resume">
           <div class="career-card">
             <div class="timeline">
-              <div class="date">Jan. 2022 - PRESENT</div>
+              <div class="date">Jan. 2022 - Jun. 2024</div>
               <div class="length">2.5 Years</div>
             </div>
             <div class="skills-card">
@@ -77,7 +77,7 @@
           </div>
           <div class="career-card">
             <div class="timeline">
-              <div class="date">Jan 2021 - Jan 2022</div>
+              <div class="date">Dec. 2020 - Jan. 2022</div>
               <div class="length">2 Years</div>
             </div>
             <div class="skills-card">
@@ -91,26 +91,79 @@
               <div class="job-title">Applications Engineer ♦ Vanguard</div>
               <div class="job-description">
                 Primarily worked as a Full Stack developer maintaining legacy
-                codes. Worked closely with cross-function teams, developers,
-                backend, designers, product managers to implement new designs.
-                Made new greenfield product for use with internal CMS systems.
+                codes. Followed the Agile/Lean methodology. Analyzed and
+                identified areas for test automation by implementing stories.
+              </div>
+            </div>
+          </div>
+          <div class="career-card">
+            <div class="timeline">
+              <div class="date">Apr. 2020 - Nov. 2020</div>
+              <div class="length">8 Months</div>
+            </div>
+            <div class="skills-card">
+              <div class="stackSkill">Salesforce</div>
+              <div class="stackSkill">MongoDB</div>
+              <div class="stackSkill">Express</div>
+              <div class="stackSkill">AngularJS</div>
+              <div class="stackSkill">NodeJS</div>
+            </div>
+            <div class="job-card">
+              <div class="job-title">Salesforce Developer ♦ Vanguard</div>
+              <div class="job-description">
+                Analyzed and identified areas for improvement to organization's
+                Salesforce Security Model. Worked with internal international
+                teams to determine and configure desired Salesforce interaction.
+                During this time I mentored and advised an IT intern project
+                team that used MEAN stack structure for an internal application
+                development.
+              </div>
+            </div>
+          </div>
+          <div class="career-card">
+            <div class="timeline">
+              <div class="date">Jul. 2019 - Mar. 2020</div>
+              <div class="length">8 Months</div>
+            </div>
+            <div class="skills-card">
+              <div class="stackSkill">HTML</div>
+              <div class="stackSkill">CSS</div>
+              <div class="stackSkill">JavaScript</div>
+              <div class="stackSkill">Public Speaking</div>
+              <div class="stackSkill">Project Planning</div>
+            </div>
+            <div class="job-card">
+              <div class="job-title">
+                Technology Leadership Program ♦ Vanguard
+              </div>
+              <div class="job-description">
+                Leadership focused training in Technology. Highly focused
+                technical development training in full stack development, web
+                accessibility, and implemented a prototype internal application
+                for company wide usage. Engaged in specialized training to
+                develop business and leadership abilities including but not
+                limited to: project presentation, business negotiations, public
+                speaking, interpersonal skills, and project planning.
               </div>
             </div>
           </div>
         </div>
-        <a class="button-go-to-top" href="#top">Go to top</a>
+        <h3>Education</h3>
+        <p>
+          Graduated May 2019 with a B.A. in Computer Science from Gettysburg
+          College.
+        </p>
         <h3 id="Portfolio">My Portfolio</h3>
         <a
           class="paper-kawaii-button"
           href="https://jwright2021.github.io/workingPortfolio/pages/paper-kawaii.html"
-          >Paper Kawaii Copy</a
+          >Paper Kawaii Reproduction</a
         >
         <p>
-          This is a reimagined take on Paper Kawaii. I like origami and have
+          This is a re-imagined take on Paper Kawaii. I like origami and have
           followed this site for a lot of tutorials; so I figured it'd be fun to
-          make a sample site based on it.
+          make a sample interface based on it.
         </p>
-        <a class="button-go-to-top" href="#top">Go to top</a>
         <h3 id="About">About Me</h3>
         <div id="aboutInjection"></div>
         <a class="button-go-to-top" href="#top">Go to top</a>
